[package]
name = "asted-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cc = "1.0.82"
glob = "0.3.1"
nanomsg = "0.7.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tree-sitter = "0.20.10"
tree-sitter-cpp = "0.20.2"
tree-sitter-typescript = "0.20.2"
