[package]
name = "asted-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2", "multipart"] }
cc = "1.0.82"
clap = { version = "4.4.0", features = ["derive"] }
dashmap = "5.5.1"
flatbuffers = "23.5.26"
glob = "0.3.1"
http = "0.2.9"
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
tree-sitter = "0.20.10"
tree-sitter-cpp = "0.20.2"
tree-sitter-typescript = "0.20.2"
